--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@ a{text-decoration:none; color:#303030;}
 
 /* header section */
 header{background:#202020; width:100%; height:80px; position:fixed; overflow:hidden; top:0; z-index:1;}
-header ul li{float:left; line-height:80px; margin:0 20px; font-weight:600;}
-header ul li a{color:#fff; font-size:0.8rem;}
+header ul li{float:left; line-height:80px; margin:0 20px; font-weight:600; transition:all 0.4s; cursor:pointer;}
+header ul li:hover a,header ul li.on a{color:#feb633; border-bottom:2px solid #feb633;}
+header ul li a{color:#fff; font-size:0.8rem; transition:color 0.4s; padding-bottom:1rem;}
 
 header p{font-size:1.5rem; font-style:italic; font-family:'Roboto';}
 header span{color:gold;}
@@ -30,7 +31,7 @@ header img{width:150px; height:150px;}
 /* About section */
 .about_con img{width:427px;}
 
-/* Portfolio Section Slide style */
+/* Portfolio section Slide style */
 .slick-slider{height:100%;}
 .slides{position:relative; outline:0; cursor:grab; text-align:center;}
 .slides img{height:440px; position:relative; left:50%; transform:translateX(-50%);}
@@ -44,3 +45,33 @@ header img{width:150px; height:150px;}
 .slick-prev:hover:before,.slick-next:hover:before{color:#feb633;}
 .slick-dots li button:before{color:#aaa; transition:all 0.4s;}
 .slick-dots li.slick-active button:before{color:#feb633; transform:scale(1.5);}
+
+/* Contact section style */
+.contact_con ul li{padding:0.5rem 0;}
+.contact_con ul li span{padding:0 0.5rem;}
+
+
+/* media query style */
+@media screen and (max-width:1200px){
+  .center{width:70%;}
+  #home .Contents img{width:520px;}
+}
+
+@media screen and (max-width:900px){
+  #home .Contents img{width:430px;}
+  #portfolio .Contents img{width:500px; height:380px;}
+}
+
+@media screen and (max-width:800px){
+  .slick-prev, .slick-next{display:none !important;}
+}
+
+@media screen and (max-width:700px){
+  header img{width:100px; height:100px;}
+  header ul li{margin:0 15px;}
+  #home .Contents img{width:410px; left:50%; transform:translateX(-50%);}
+  .slides h2{padding-top:5px;}
+  .slides a{margin-top:1rem;}
+  #portfolio .Contents img{width:460px; height:356px;}
+}
+
