--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 .center{width:60%; margin:auto; position:relative; height:100%;}
 ul,ol{list-style:none;}
 a{text-decoration:none; color:#303030;}
+.clear:after{content:''; display:block; clear:both;}
 
 /* header section */
 header{background:#202020; width:100%; height:80px; position:fixed; overflow:hidden; top:0; z-index:1;}
