--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a{text-decoration:none; color:#303030;}
 /* header section */
 header{background:#202020; width:100%; height:80px; position:fixed; overflow:hidden; top:0; z-index:1;}
 header ul li{float:left; line-height:80px; margin:0 20px; font-weight:600; transition:all 0.4s; cursor:pointer;}
-header ul li:hover a,header ul li.on a{color:#feb633; border-bottom:2px solid #feb633;}
+header ul li:hover a,header ul li a.nav_on{color:#feb633; border-bottom:2px solid #feb633;}
 header ul li a{color:#fff; font-size:0.8rem; transition:color 0.4s; padding-bottom:1rem;}
 
 header p{font-size:1.5rem; font-style:italic; font-family:'Roboto';}
