--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,13 @@ header img{width:150px; height:150px;}
 
 /* Home section */
 .Contents img{width:620px; position:absolute; bottom:0;}
+.homelink{background:#feb633; border-radius:5px; padding:1rem 4rem; margin-top:3rem; display:inline-block; color:#fff; font-weight:500; font-size:1.2rem; transition:all 0.4s; border:2px solid #feb633;}
+.homelink:hover{background:#101010; color:#feb633;}
 
 /* About section */
 .about_con img{width:427px;}
+.aboutlink{background:#feb633; border-radius:5px; padding:0.8rem 3rem; display:inline-block; color:#fff; font-weight:500; font-size:1.2rem; transition:all 0.4s; border:2px solid #feb633;}
+.aboutlink:hover{background:#101010; color:#feb633;}
 
 /* Portfolio section Slide style */
 .slick-slider{height:100%;}
@@ -74,7 +78,17 @@ header img{width:150px; height:150px;}
 
 .card .left{margin:1% 1% 1% 0;}
 .card .right{margin:1% 0 1% 1%;}
+
+/* Detail page */
+.weblist{width:100%; height:auto; position:relative; padding-bottom:3rem;}
+.weblist img{height:100%; position:absolute; left:50%; transform:translateX(-50%);}
+
 /* ------------------- media query style css -----------------------*/
+@media screen and (max-width:1480px){
+  .homelink{padding:1rem 3.4rem; font-size:1.0rem;}
+  .aboutlink{padding:0.6rem 2.5rem; font-size:1.0rem;}
+}
+
 @media screen and (max-width:1200px){
   .center{width:70%;}
   #home .Contents img{width:520px;}
@@ -95,8 +109,17 @@ header img{width:150px; height:150px;}
   #home .Contents img{width:410px; left:50%; transform:translateX(-50%);}
   .slides h2{padding-top:5px;}
   .slides a{margin-top:1rem;}
-  #portfolio .Contents img{width:460px; height:356px;}
+  #portfolio .Contents img{width:400px; height:300px;}
+
+  .card .left{margin:3% 0 3% 0;}
+  .card .right{margin:3% 0 3% 0;}
 }
 
+@media screen and (max-width:550px){
+
+  #portfolio .Contents img{width:330px; height:250px;}
+
+  .contact_con ul li{font-size:0.8rem;}
+}
 
 
